--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,1 @@
-<html>
-
-<head>
-  <title>Choose Form Application</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>Express 6</h1>
-  <p>Welcome to Express</p>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Choose Plan"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Choose Plan App</title><script defer="defer" src="/static/js/main.bde23eb2.js"></script><link href="/static/css/main.d7ae8875.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
